2012-03-07  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/i386/configure.in (cpuid.h): Use AC_CHECK_HEADER with no
	default includes instead of AC_HEADER_CHECK.
	* sysdeps/i386/configure: Regenerated.

	[BZ #10716]
	* math/s_cacosh.c (__cacosh): Convert negative log results to 0.
	* math/s_cacoshf.c (__cacoshf): Likewise.
	* math/s_cacoshl.c (__cacoshl): Likewise.
	* math/s_casinh.c (__casinh): Set signs of result from argument.
	* math/s_casinhf.c (__casinhf): Likewise.
	* math/s_casinhl.c (__casinhl): Likewise.
	* math/libm-test.inc (cacos_test, cacosh_test, casin_test)
	(casinh_test): Add more tests.
	* sysdeps/i386/fpu/libm-test-ulps: Update.
	* sysdeps/x86_64/fpu/libm-test-ulps: Likewise.

2012-03-07  Ulrich Drepper  <drepper@gmail.com>

	* login/Makefile (distribute): Remove variable.
	* catgets/Makefile: Likewise.
	* mach/Makefile: Likewise.
	* malloc/Makefile: Likewise.
	* misc/Makefile: Likewise.
	* iconv/Makefile: Likewise.
	* nscd/Makefile: Likewise.
	* hurd/Makefile: Likewise.
	* manual/Makefile: Likewise.
	* locale/Makefile: Likewise.
	* intl/Makefile: Likewise.
	* conform/Makefile: Likewise.
	* nss/Makefile: Likewise.
	* time/Makefile: Likewise.
	* soft-fp/Makefile: Likewise.
	* dirent/Makefile: Likewise.
	* gmon/Makefile: Likewise.
	* po/Makefile: Likewise.
	* rt/Makefile: Likewise.
	* socket/Makefile: Likewise.
	* math/Makefile: Likewise.
	* signal/Makefile: Likewise.
	* debug/Makefile: Likewise.
	* elf/Makefile: Likewise.
	* timezone/Makefile: Likewise.
	* stdlib/Makefile: Likewise.
	* iconvdata/Makefile: Likewise.
	* sunrpc/Makefile: Likewise.
	* io/Makefile: Likewise.
	* argp/Makefile: Likewise.
	* inet/Makefile: Likewise.
	* hesiod/Makefile: Likewise.
	* grp/Makefile: Likewise.
	* csu/Makefile: Likewise.
	* wctype/Makefile: Likewise.
	* crypt/Makefile: Likewise.
	* libio/Makefile: Likewise.
	* string/Makefile: Likewise.
	* nis/Makefile: Likewise.
	* resolv/Makefile: Likewise.
	* stdio-common/Makefile: Likewise.